# jabali-terminal

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
completions/: jabali-terminal.bash
configs/: jabali-terminal.conf.example  jabali-terminal.service
configs/caddy/: jabali-terminal.caddy
configs/logrotate.d/: jabali-terminal
configs/nginx/: jabali-terminal-snippet.conf
daemon/: Makefile  __init__.py  audit.py  auth.py  config.py  nonce_store.py  pty_bridge.py  pyproject.toml  server.py
daemon/tests/: __init__.py  test_audit.py  test_audit_integrity.py  test_auth.py  test_config.py  test_nonce_store.py  test_one_session_per_admin.py  test_pty_bounds.py  test_security_bugs.py
docs/: E2E_TEST_REPORT.md  SECURITY.md
panel/: JabaliTerminalClient.php  JabaliTerminalPlugin.php  JabaliTerminalServiceProvider.php  composer.json  phpstan.neon.dist
panel/Http/: PreventFramingMiddleware.php
panel/Http/Controllers/: TerminalSessionController.php
panel/Pages/: Sessions.php  Terminal.php
panel/resources/: package-deps.json
panel/resources/css/: jabali-terminal.css
panel/resources/js/: jabali-terminal.js
panel/tests/Feature/: TerminalAuthTest.php
panel/views/: sessions.blade.php  terminal.blade.php
tests/: e2e_caddy.py  e2e_socket.py
